Fix text truncation styles

--- a/css/src/util/_typography.scss
+++ b/css/src/util/_typography.scss
@@ -1,22 +1,31 @@
-.truncate-lines {
-	@include text-truncate;
-}
+@supports (display: -webkit-box) { // sass-lint:disable-line no-vendor-prefixes
+	.livewhale {
+		.truncate-lines {
+			display: -webkit-box; // sass-lint:disable-line no-vendor-prefixes
+			-webkit-box-orient: vertical; // sass-lint:disable-line no-vendor-prefixes
+			-webkit-line-clamp: 3; // sass-lint:disable-line no-vendor-prefixes
+			overflow: hidden;
+		}
 
-@include breakpoint(medium) {
-	.medium-truncate-lines {
-		@include text-truncate;
-		display: inline-block;
-	}
+		@include breakpoint(medium) {
+			.medium-truncate-lines {
+				display: -webkit-box; // sass-lint:disable-line no-vendor-prefixes
+				-webkit-box-orient: vertical; // sass-lint:disable-line no-vendor-prefixes
+				-webkit-line-clamp: 3; // sass-lint:disable-line no-vendor-prefixes
+				overflow: hidden;
+			}
 
-	.medium-truncate-1-line {
-		-webkit-line-clamp: 1; // sass-lint:disable-line no-vendor-prefixes
-	}
+			.medium-truncate-1-line {
+				-webkit-line-clamp: 1; // sass-lint:disable-line no-vendor-prefixes
+			}
 
-	.medium-truncate-2-lines {
-		-webkit-line-clamp: 2; // sass-lint:disable-line no-vendor-prefixes
-	}
+			.medium-truncate-2-lines {
+				-webkit-line-clamp: 2; // sass-lint:disable-line no-vendor-prefixes
+			}
 
-	.medium-truncate-4-lines {
-		-webkit-line-clamp: 4; // sass-lint:disable-line no-vendor-prefixes
+			.medium-truncate-4-lines {
+				-webkit-line-clamp: 4; // sass-lint:disable-line no-vendor-prefixes
+			}
+		}
 	}
 }
